fix: fix the responsibility problem with facebook embed on mobile
Some scc styles were messing the responsibility. No more needed javascript for making posts responsible.

--- a/staticfiles/sass/news/_news-list.scss
+++ b/staticfiles/sass/news/_news-list.scss
@@ -35,6 +35,7 @@
       &-pinned {
         border: 2px solid $danger !important;
       }
+
       &-text {
         white-space: pre-line;
       }
@@ -51,12 +52,15 @@
       height: 1px;
     }
 
-    .fb-post-container {
-      overflow-x: hidden;
+    .fb-post > span {
+      max-width: 100%;
     }
 
-    .fb-post {
-      outline: 1px solid $secondary;
+    .fb-post iframe {
+      border: 0;
+      display: block;
+      margin: 0 auto;
+      max-width: 100%;
     }
   }
 }
